--- a/src/css/wysihtml5/stylesheet.css
+++ b/src/css/wysihtml5/stylesheet.css
@@ -1,7 +1,7 @@
 #wysihtml5-header {
   display: block;
   border-radius: 4px;
-  width: 810px;
+  width: auto;
   background: #eee;
   position: relative;
   z-index: 1;
@@ -233,11 +233,11 @@
   background: #999;
 }
 
-#wysihtml5-textarea {
+#wysihtml5-editor {
   font-family: "Courier New", Courier, monospace;
   width: 100%;
   background: transparent;
-  height: 100%;
+  height: 400px;
   border: 0;
   resize: none;
   white-space: pre;
