Added an autosave. Bit of cleanup.

--- a/src/css/wysihtml5/stylesheet.css
+++ b/src/css/wysihtml5/stylesheet.css
@@ -235,6 +235,7 @@
 
 #wysihtml5-editor {
   font-family: "Courier New", Courier, monospace;
+  font-size: 1.4em;
   width: 100%;
   background: transparent;
   height: 400px;
